--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -332,6 +332,7 @@ input[type="range"].kmSlider:focus::-ms-fill-upper {
   width: 100%;
   flex-wrap: wrap;
   align-content: space-around;
+  justify-content: space-around;
 }
 
 .interestsButtonWrapper input {
@@ -532,6 +533,10 @@ input[type="checkbox"]:checked + label {
 .addJobContainer {
   width: 100%;
   height: 10vh;
+}
+
+.moonLoader {
+  margin: 0 auto;
 }
 
 .addJobButton {
