moonloading in cetner on all sizes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -536,7 +536,9 @@ input[type="checkbox"]:checked + label {
 }
 
 .moonLoader {
-  margin: 0 auto;
+  margin: 50% auto;
+  width: 10%;
+  height: 10%;
 }
 
 .addJobButton {
