change arrow color and add set timeout to user fetch

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -870,7 +870,7 @@ margin-top: 8%;
 }
 
 .goToChatsArrow {
-  color: white;
+  color: black;
   font-size: 5vh;
   position: absolute;
   right: 2%;
