work on moon loader

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -572,9 +572,12 @@ margin-top: 8%;
 }
 
 .moonLoader {
-  margin: 50% auto;
+  position: absolute;
+  margin: 0 auto;
+  padding: 40%;
   width: 10%;
-  height: 10%;
+  height: 100%;
+  background-color: white;
 }
 
 .addJobButton {
