--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -572,13 +572,20 @@ margin-top: 8%;
   height: 10vh;
 }
 
+.innerMoonLoader {
+  background-color: white;
+  width: 100vw;
+  position: fixed;
+  height: 100%;
+}
+
 .moonLoader {
-  position: absolute;
+  position: relative;
   margin: 0 auto;
-  /* padding: 40%; */
-  width: 10%;
+  width: max-content;
   height: 100%;
   background-color: white;
+  top: 45vh;
 }
 
 .addJobButton {
