--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1013,9 +1013,9 @@ margin-top: 8%;
 .chatTitleHeader{
   color:white;
   position: relative;
-  top:2vh;
+  margin:12% auto;
   margin-left:2vw;
-  
+  margin-right:2vw;
 }
 
 @media only screen and (min-width: 436px) {
