--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -511,13 +511,38 @@ input[type="checkbox"]:checked + label {
 /* job Details Page */
 
 .jobDetailsName {
-  margin-top: 3vh;
   color: #868686;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 330;
   font-size: 20px;
   width: 100%;
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  float: left;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 4vw;
+}
+.jobDetailsKm {
+  color: #868686;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 330;
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 87%;
+  width: 100%;
+  float: left;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 4vw;
 }
 
 
@@ -532,6 +557,7 @@ input[type="checkbox"]:checked + label {
 .jobPictureContainer{
   width: 100%;
   text-align: center;
+  border-radius: 10px;
 }
 
 .jobPicture{
@@ -541,7 +567,7 @@ input[type="checkbox"]:checked + label {
 }
 
 .jobDetailsStyling{
-  font-size: 3vh;
+  font-size: 5vw;
   color: grey;
   margin-bottom: 1vh;
 }
@@ -559,8 +585,14 @@ input[type="checkbox"]:checked + label {
   position: relative;
   display: flex;
   margin: 0 auto;
-  padding-left: 7%;
-  padding-top: 5%;
+  padding-left: 4%;
+  padding-top: 1%;
+  margin-top: 2%;
+}
+
+.jobDetailDescription{
+  padding-left: 6%;
+  font-size: 4vw;
 }
 
 *:focus{
@@ -851,8 +883,8 @@ input[type="checkbox"]:checked + label {
 .pageTitle {
   color: #868686;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 380;
-  font-size: 2em;
+  font-weight: 350;
+  font-size: 7vw;
   width: 100%;
   text-align: center;
   padding-top: 11%;
@@ -1101,8 +1133,9 @@ input[type="checkbox"]:checked + label {
     left: 0%;
   }
   .patronBar{
-    padding-left: 30px;
-    padding-top: 20px;
+    padding-left: 12px;
+    padding-top: 4px;
+    margin-top: 12px;
   }
   .jobDetailsPatronPicture{
     margin-right: 20px;
@@ -1110,6 +1143,23 @@ input[type="checkbox"]:checked + label {
     max-height: 65px;
     border-radius: 100px;
   }
+
+  .jobDetailsName, .jobDetailsKm{
+    font-size: 20px
+  }
+
+  .pageTitle{
+  font-size: 30px;
+  }
+
+  .jobDetailDescription{
+    font-size: 18px;
+  }
+
+.jobDetailsStyling{
+  font-size: 23px;
+}
+
 }
 
 
