--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@ button:focus {
   outline: none;
 }
 
-.userBubble{
+.userBubble {
   color: rgb(49, 49, 49);
   vertical-align: right;
   right: 0px;
@@ -58,67 +58,67 @@ button:focus {
   box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.274);
 }
 
-.dealButtonsContainer{
-  position:absolute;
-   right:5px;
-   top:0;
-   z-index: 2;
+.dealButtonsContainer {
+  position: absolute;
+  right: 5px;
+  top: 0;
+  z-index: 2;
 }
 
-.cornerButton{
-background-color:transparent;
-border: none;
-font-size:3vh;
-color: #82da05;
-padding-top:2vh;
-font-weight: bold;
+.cornerButton {
+  background-color: transparent;
+  border: none;
+  font-size: 3vh;
+  color: #82da05;
+  padding-top: 2vh;
+  font-weight: bold;
 }
 
-.rejectButton{
-  margin-top: 8px !important;;
- padding-left: 6px;
- padding-right: 6px;
+.rejectButton {
+  margin-top: 8px !important;
+  padding-left: 6px;
+  padding-right: 6px;
   text-align: center;
   background-color: red;
   color: white;
   border-radius: 18px;
-  font-size:15pt;
+  font-size: 15pt;
 }
 
-.dis{
-color: rgb(138, 138, 138);
-text-shadow: -1px -1px -1px rgba(0, 0, 0, 0.342);
+.dis {
+  color: rgb(138, 138, 138);
+  text-shadow: -1px -1px -1px rgba(0, 0, 0, 0.342);
 }
 
-.chatHeader{
-position: relative;
-padding-top: 0vh;
-margin-bottom: 1vw !important;
+.chatHeader {
+  position: relative;
+  padding-top: 0vh;
+  margin-bottom: 1vw !important;
 }
 
-.chatSplit{
+.chatSplit {
   margin-bottom: 0 !important;
 }
 
-.headerText{
-margin-top: 3vh;
-font-size:4vh;
-text-align: center;
-top:1vh;
-text-shadow:none;
+.headerText {
+  margin-top: 3vh;
+  font-size: 4vh;
+  text-align: center;
+  top: 1vh;
+  text-shadow: none;
 }
 
-.swipeButton:active{
-background:rgb(187, 187, 187);
+.swipeButton:active {
+  background: rgb(187, 187, 187);
 }
 
-.backButton:active{
-  background:#ccc;
+.backButton:active {
+  background: #ccc;
   color: darkgreen;
 }
 
-#chatbar{
-  width:80vw;
+#chatbar {
+  width: 80vw;
   padding: 1vw;
   border: solid 2px #ccc;
 }
@@ -129,20 +129,19 @@ background:rgb(187, 187, 187);
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.712);
 }
 
-::-webkit-scrollbar{
-  width:0px;
-  background:transparent
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
 
 .chatInput {
-      bottom: 0vh;
-    position: absolute;
-    padding-bottom: 4vh;
-    padding-top: 2%;
-    padding-left: 8vw;
-    padding-right: 8vw; 
+  bottom: 0vh;
+  position: absolute;
+  padding-bottom: 4vh;
+  padding-top: 2%;
+  padding-left: 8vw;
+  padding-right: 8vw;
 }
-
 
 ul {
   -webkit-padding-start: 0;
@@ -455,21 +454,21 @@ input[type="checkbox"]:checked + label {
 
 /* End of welcome page 3 style */
 
-.backButton{
-    color: #222222;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    position: absolute;
-    font-size: 1.5em; 
-    left: 2%;
-    top: 2%;
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden; 
-    z-index: 2;
-    transition: all 0.8s ease-in-out !important;
+.backButton {
+  color: #222222;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  position: absolute;
+  font-size: 1.5em;
+  left: 2%;
+  top: 2%;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 2;
+  transition: all 0.8s ease-in-out !important;
 }
 
 .left {
@@ -525,43 +524,41 @@ input[type="checkbox"]:checked + label {
   text-align: center;
 }
 
-
-.jobDescriptionDetailsWrapper{
-    text-align: left;
-    padding: 0% 6% 6% 6%;
-    margin-top: 5vh;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: rgb(51, 51, 51)
+.jobDescriptionDetailsWrapper {
+  text-align: left;
+  padding: 0% 6% 6% 6%;
+  margin-top: 5vh;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: rgb(51, 51, 51);
 }
 
-.jobPictureContainer{
-margin-top: 8%;
+.jobPictureContainer {
+  margin-top: 8%;
 }
 
-.jobPicture{
+.jobPicture {
   min-width: 90vw;
   max-width: 90vw;
-  margin-left:5vw;
+  margin-left: 5vw;
   margin-right: 5vw;
   border-radius: 1px;
   border: 1px solid rgb(51, 51, 51);
 }
 
-.jobDetailsStyling{
+.jobDetailsStyling {
   font-size: 3vh;
   color: grey;
   margin-bottom: 1vh;
 }
 
-.smallTextId{
+.smallTextId {
   position: absolute;
   bottom: 0%;
-  right:0%;
+  right: 0%;
   font-size: 8pt;
 }
 
-
-.patronBar{
+.patronBar {
   width: 90vw;
   margin-left: 5vw;
   margin-right: 5vw;
@@ -570,12 +567,12 @@ margin-top: 8%;
   display: flex;
 }
 
-*:focus{
+*:focus {
   outline: none !important;
 }
 
-.jobDetailsPatronPicture{
-  margin-right:7%;
+.jobDetailsPatronPicture {
+  margin-right: 7%;
   max-width: 16vw;
   max-height: 8vh;
   border-radius: 100px;
@@ -594,7 +591,7 @@ margin-top: 8%;
   height: 10vh;
 }
 
-.mandatoryText{
+.mandatoryText {
   color: #696969;
   width: 85%;
   font-size: 15px;
@@ -669,7 +666,6 @@ margin-top: 8%;
 }
 
 .stack {
-  
 }
 
 .bottomBar {
@@ -786,15 +782,15 @@ margin-top: 8%;
 .swipeButton {
   border: solid 2vw #eaeaea;
   background: #fff;
-     border-radius: 50%;
-    width: 25%;
-    padding-top: 20%;
-    margin-left: -2.8vw;
-    margin-bottom: 5vw;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: 50% !important;
-    transition: all 0.2s ease-in-out;
+  border-radius: 50%;
+  width: 25%;
+  padding-top: 20%;
+  margin-left: -2.8vw;
+  margin-bottom: 5vw;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 50% !important;
+  transition: all 0.2s ease-in-out;
 }
 
 #x {
@@ -840,7 +836,7 @@ margin-top: 8%;
   width: 100%;
 }
 
-.uploadWrapper{
+.uploadWrapper {
   width: 85%;
   border-radius: 10px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -854,16 +850,15 @@ margin-top: 8%;
   border: none;
 }
 
-.fileText{
+.fileText {
   position: absolute;
   margin-left: 1%;
   font-weight: 300;
 }
 
-.fileText:hover{
+.fileText:hover {
   font-weight: 400;
 }
-
 
 .pageTitle {
   color: #868686;
@@ -876,8 +871,6 @@ margin-top: 8%;
   margin-bottom: 0%;
   padding-top: 8.1vh;
 }
-
-
 
 .split {
   width: 50%;
@@ -892,7 +885,7 @@ margin-top: 8%;
 }
 
 .jobTitleHeader {
-  display:inline;
+  display: inline;
   position: relative;
   color: white;
   font-size: 2vh;
@@ -929,8 +922,7 @@ margin-top: 8%;
   margin-left: 8%;
   border-radius: 10px;
   position: relative;
-    margin-bottom: 2vh;
-
+  margin-bottom: 2vh;
 }
 
 .pairedDealCard {
@@ -940,7 +932,7 @@ margin-top: 8%;
   margin-left: 8%;
   border-radius: 10px;
   position: relative;
- margin-bottom: 2vh;
+  margin-bottom: 2vh;
 }
 
 .removeJob {
@@ -963,7 +955,6 @@ margin-top: 8%;
   border: none;
   background-color: transparent;
   font-weight: bold;
-
 }
 
 .jobDetailsHeader {
@@ -977,9 +968,8 @@ margin-top: 8%;
   margin-bottom: 1%;
 }
 
-
-.jobDetailsFlexer{
-  display:flex;
+.jobDetailsFlexer {
+  display: flex;
   flex-flow: column;
 }
 /* login page */
@@ -993,24 +983,23 @@ margin-top: 8%;
   text-align: center;
 }
 
-
 /* Chatslist */
 
-.chatCard{
+.chatCard {
   position: relative !important;
 }
 
-.chatUserPic{
-    float: left;
-    border-radius: 50%;
-    border: solid 2px white;
-    width: 10vh;
-    height: 10vh;
-    margin-top: 2vh;
-    margin-left: 1vh;
+.chatUserPic {
+  float: left;
+  border-radius: 50%;
+  border: solid 2px white;
+  width: 10vh;
+  height: 10vh;
+  margin-top: 2vh;
+  margin-left: 1vh;
 }
 
-.removeChat{
+.removeChat {
   position: absolute;
   left: 1%;
   color: white;
@@ -1021,12 +1010,12 @@ margin-top: 8%;
   font-weight: bold;
 }
 
-.chatFlex{
-  display:flex;
+.chatFlex {
+  display: flex;
   position: relative;
 }
 
-.headerWrapper{
+.headerWrapper {
   text-align: center;
   position: absolute;
   top: 54%;
@@ -1038,12 +1027,12 @@ margin-top: 8%;
   -ms-transform: translate(-50%, -50%);
 }
 
-.chatTitleHeader{
-  color:white;
+.chatTitleHeader {
+  color: white;
   position: relative;
-  margin:19% auto;
-  margin-left:5vw;
-  margin-right:2vw;
+  margin: 19% auto;
+  margin-left: 5vw;
+  margin-right: 2vw;
   font-weight: 300;
   font-size: 4.6vw;
 }
@@ -1054,45 +1043,48 @@ margin-top: 8%;
     margin: 0 auto;
     width: 436px;
   }
-  .stackContainer{
+
+  .innerMoonLoader{
+    width:436px;
+  }
+
+  .stackContainer {
     max-width: 351px;
     height: 351px;
     max-height: 351px;
     padding-top: 0px;
   }
 
-  .jobDetails{
-    font-size:15px;
+  .jobDetails {
+    font-size: 15px;
     font-weight: 400;
     color: #484848;
   }
 
-  .logo2{
+  .logo2 {
     width: 175px;
   }
 
-  .logoContainer{
+  .logoContainer {
     margin-bottom: 35px;
   }
 
-
-  .addJobContainer{
+  .addJobContainer {
     width: 351px;
     margin: 0 auto;
     height: 80px;
   }
 
-  .addJobButton{
+  .addJobButton {
     width: 32px;
     height: 32px;
     padding-top: 0px;
     margin-left: 90%;
   }
 
-  .addJobInner{
+  .addJobInner {
     font-size: 18px;
   }
-
 
   .navBar {
     width: 351px;
@@ -1104,15 +1096,15 @@ margin-top: 8%;
 
   .navImage {
     width: 40px;
-}
+  }
 
-.jobsLink {
-  right: -3px;
-}
+  .jobsLink {
+    right: -3px;
+  }
 
-.settingsLink {
-  left: -3px;
-}
+  .settingsLink {
+    left: -3px;
+  }
 
   .app {
     max-height: 100vh;
@@ -1124,7 +1116,7 @@ margin-top: 8%;
     padding-top: 0px;
     margin-left: -15px;
   }
- 
+
   .welcomeText {
     position: fixed;
     left: 0%;
@@ -1135,40 +1127,39 @@ margin-top: 8%;
     bottom: 5%;
     left: 0%;
   }
-  .patronBar{
+  .patronBar {
     padding-left: 12px;
     padding-top: 4px;
     margin-top: 12px;
   }
-  .jobDetailsPatronPicture{
+  .jobDetailsPatronPicture {
     margin-right: 20px;
     width: 65px;
     max-height: 65px;
     border-radius: 100px;
   }
 
-  .jobDetailsName, .jobDetailsKm{
-    font-size: 20px
+  .jobDetailsName,
+  .jobDetailsKm {
+    font-size: 20px;
   }
 
-  .pageTitle{
-  font-size: 30px;
+  .pageTitle {
+    font-size: 30px;
   }
 
-  .jobDetailDescription{
+  .jobDetailDescription {
     font-size: 18px;
   }
 
-.jobDetailsStyling{
-  font-size: 23px;
-}
+  .jobDetailsStyling {
+    font-size: 23px;
+  }
 
-.chatTitleHeader{
-  font-size: 18px;
+  .chatTitleHeader {
+    font-size: 18px;
+  }
 }
-
-}
-
 
 /* @media only screen and (min-width: 600px) {
   body {
