--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -225,7 +225,7 @@ input {
   font-weight: 300;
   width: 100%;
   text-align: center;
-  padding-top: 10%;
+  margin-top: 0%;
 }
 .rangeWrapper {
   width: 100%;
@@ -401,7 +401,7 @@ input[type="checkbox"]:checked + label {
 
 .buttonWrapper2 {
   text-align: center;
-  padding-top: 25%;
+  padding-top: 10%;
   padding-bottom: 10%;
 }
 
@@ -411,7 +411,6 @@ input[type="checkbox"]:checked + label {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  position: absolute;
   width: 100%;
 }
 
