--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -662,7 +662,7 @@ input[type="checkbox"]:checked + label {
   -moz-border-radius: 10;
   border-radius: 5px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #ffffff;
+  background: #ffffff;  
   font-size: 1.5em;
   text-align: center;
   width: 7%;
